--- a/styles/style.css
+++ b/styles/style.css
@@ -1,55 +1,134 @@
 /* MAIN CONTAINER */
-.grid-container {
-	display: grid;
-	grid-template-columns: 300px auto auto;
-	grid-gap: 10px;
-	background-color: rgb(185, 222, 247);
-	padding: 10px;
-	height: 95vh;
-	grid-template-rows: 100px auto;
-  }
-
-.grid-container > div {
-	background-color: rgba(255, 255, 255, 0.8);
-	padding: 20px 0;
-	font-size: 30px;
+body{
+    background-color: whitesmoke;
 }
-
+a{
+    text-decoration: none;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 200px auto auto;
+    grid-gap: 0;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid black;
+    height: 95vh;
+    grid-template-rows: 60px auto;
+  }
+.grid-container > div {
+    border: 1px solid rgb(216, 216, 216);
+    padding: 1px 0;
+    font-size: 30px;
+}
 .header {
-	grid-column: 1 / span 3;
-	background: blue;
+    display: grid;
+    align-content: center;
+    padding: 1px;
+    grid-column: 1 / span 3;
 }
 .content{
-	grid-column: 2 / span 2;
-	overflow: scroll;
+    border: 1px solid rgba(240, 240, 240, 0.952);
+    background: yellow;
+    grid-column: 2 / span 2;
+    overflow: scroll;
 }
-
-
 /*HEADER CONTENT*/
 .header_content {
-	display: grid;
-	grid-template-columns: 200px  auto 100px 100px;
+    display: grid;
+    padding: 1px;
+    grid-template-columns: 200px  auto 100px 100px;
+    grid-template-rows: 60px;
 }
-
 /* PRODUCT STYLE*/
 .product{
-	border: solid 3px black;
-	margin: 10px;
-	display: grid;
-	grid-template-columns: 350px auto;
+    border: solid 3px black;
+    margin: 10px;
+    display: grid;
+    grid-template-columns: 350px auto;
 }
-
 .prod_img{
-	grid-row: 1 / span 2;
+    grid-row: 1 / span 2;
 }
-
 .prod_img img{
-	width: 300px;
+    width: 300px;
 }
-
 .prod_name{
-	
+    grid-row: 1;
+    
 }
-  
-
-
+/*эмблема 42*/
+.school42{
+    grid-column: 1;
+    text-align: center;
+    height: 100%;
+}
+.school42 img{
+    padding: 0;
+    margin: 0;
+    width: 65px;
+}
+/*Размещение боковой панели*/
+.sidebar{
+    grid-column: 1;
+    grid-row: 2;
+}
+/*название в шапке*/
+.music_show{
+    display: block;
+    grid-column: 2;
+    height: 100%;
+}
+.music_show p{
+    text-align: center;
+    padding: 0;
+    margin: 13px;
+}
+/*кнопка логина*/
+.log_in{
+    background-color: #b3b3b3;
+    grid-column:3;
+    width: 100%;
+    border: 0;
+    color: black;
+    opacity: 0.1;
+    transition-duration: 0.4s;
+    height: 100%;
+}
+.log_in:hover{
+    opacity: 1;
+}
+/*кнопка корзины*/
+.basket{
+    display: block;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    grid-column:4;
+    text-align: center;
+    transition-duration: 0.4s;
+    background-color: #43d0bf;
+    opacity: 1;
+}
+.basket:hover{
+    opacity: 0.6;
+}
+/*кнопка боково панели*/
+.category0{
+    display: block;
+    text-align: center;
+}
+.category1{
+    display: block;
+    text-align: center;
+    background-color: #f5f5f5;
+    border: 0;
+    font-size: 16px;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    width: 100%;
+    height: 50px;
+}
+.category1:hover{
+    box-shadow: 0 0px 16px 0 rgba(0,0,0,0.24),0 0px 50px 0 rgba(0,0,0,0.19);
+    background-color: rgb(231, 231, 231);
+}
