--- a/styles/style.css
+++ b/styles/style.css
@@ -9,9 +9,9 @@ a{
     display: grid;
     grid-template-columns: 200px auto auto;
     grid-gap: 0;
+    box-shadow: 0 0 6px 0 rgba(0,0,0,0.24),0 0 15px 0 rgba(0,0,0,0.19);
     padding: 10px;
     margin: 10px;
-    border: 1px solid black;
     height: 95vh;
     grid-template-rows: 60px auto;
   }
@@ -23,19 +23,17 @@ a{
 .header {
     display: grid;
     align-content: center;
-    padding: 1px;
+    padding: 0px;
     grid-column: 1 / span 3;
 }
 .content{
-    border: 1px solid rgba(240, 240, 240, 0.952);
-    background: yellow;
     grid-column: 2 / span 2;
     overflow: scroll;
 }
 /*HEADER CONTENT*/
 .header_content {
     display: grid;
-    padding: 1px;
+    padding: 0px;
     grid-template-columns: 200px  auto 100px 100px;
     grid-template-rows: 60px;
 }
@@ -50,14 +48,28 @@ a{
     grid-row: 1 / span 2;
 }
 .prod_img img{
-    width: 300px;
+    width: 100px;
 }
 .prod_name{
+    font-family: "Arial Black", Times, sans-serif;
     grid-row: 1;
     
 }
+.prod_button{
+    font-family: "Arial Black", Times, sans-serif;
+    width: 100%;
+    height: 100%;
+    grid-column:4;
+    text-align: center;
+    transition-duration: 0.4s;
+    background-color: #43d0bf;  
+}
+.prod_button::hover{
+    background-color: #38a798;
+}
 /*эмблема 42*/
 .school42{
+    display: block;
     grid-column: 1;
     text-align: center;
     height: 100%;
@@ -79,53 +91,58 @@ a{
     height: 100%;
 }
 .music_show p{
+    font-family: "Arial Black", Times, sans-serif;
     text-align: center;
     padding: 0;
-    margin: 13px;
+    margin: 10px;
 }
 /*кнопка логина*/
 .log_in{
-    background-color: #b3b3b3;
+    background-color: whitesmoke;
     grid-column:3;
+    font-family: "Arial Black", Times, sans-serif;
     width: 100%;
-    border: 0;
+    border-left: 0;
+    border-right: 0;
+    border-top: 1px solid rgb(216, 216, 216);
+    border-bottom: 1px solid rgb(216, 216, 216);
     color: black;
-    opacity: 0.1;
-    transition-duration: 0.4s;
+    transition-duration: 0.6s;
     height: 100%;
 }
 .log_in:hover{
-    opacity: 1;
+    background-color: rgba(214, 214, 214, 0.329);
 }
 /*кнопка корзины*/
 .basket{
+    font-family: "Arial Black", Times, sans-serif;
     display: block;
-    border: 0;
+    border-left: 0;
+    border-right: 1px solid rgb(216, 216, 216);
+    border-top: 1px solid rgb(216, 216, 216);
+    border-bottom: 1px solid rgb(216, 216, 216);
     width: 100%;
     height: 100%;
     grid-column:4;
     text-align: center;
     transition-duration: 0.4s;
     background-color: #43d0bf;
-    opacity: 1;
 }
 .basket:hover{
-    opacity: 0.6;
+    background-color: #38a798;
 }
 /*кнопка боково панели*/
-.category0{
-    display: block;
-    text-align: center;
-}
 .category1{
+    font-family: "Arial", sans-serif;
     display: block;
     text-align: center;
     background-color: #f5f5f5;
     border: 0;
+    margin: 2px;
     font-size: 16px;
     text-decoration: none;
     transition-duration: 0.4s;
-    width: 100%;
+    width: 99%;
     height: 50px;
 }
 .category1:hover{
