--- a/styles/style.css
+++ b/styles/style.css
@@ -39,33 +39,53 @@ a{
 }
 /* PRODUCT STYLE*/
 .product{
-    border: solid 3px black;
     margin: 10px;
     display: grid;
-    grid-template-columns: 350px auto;
+    box-shadow: 0 0px 16px 0 rgba(0,0,0,0.24),0 0px 50px 0 rgba(0,0,0,0.19);
+    grid-template-columns: 200px auto 120px;
 }
 .prod_img{
-    grid-row: 1 / span 2;
+    grid-column: 1;
 }
 .prod_img img{
-    width: 100px;
+    width: 100%;
+}
+.prod_info{
+    display: grid;
+    grid-column: 2;
+    grid-template-rows: auto auto;
 }
 .prod_name{
-    font-family: "Arial Black", Times, sans-serif;
+    float: left;
     grid-row: 1;
-    
+    font-family: "Arial", Times, sans-serif;
+}
+.prod_price{
+    text-align: left;
+    grid-row: 2;
+    font-family: "Arial", Times, sans-serif;
+}
+.prod_final{
+    display: grid;
+    grid-column: 3;
+    grid-template-rows: auto 50px;
 }
 .prod_button{
-    font-family: "Arial Black", Times, sans-serif;
+    border: 1px solid black;
+    grid-row: 2;
+    display: block;
+    font-family: "Arial", Times, sans-serif;
     width: 100%;
-    height: 100%;
-    grid-column:4;
+    height: 50px;
+    color: black;
     text-align: center;
     transition-duration: 0.4s;
     background-color: #43d0bf;  
 }
-.prod_button::hover{
-    background-color: #38a798;
+.prod_button:hover{
+    color: #43d0bf;
+    background-color: #43d0bd00;
+    border: 5px solid #43d0bf;
 }
 /*эмблема 42*/
 .school42{
